--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -25,14 +26,20 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18n-backend": "^0.1.13",
+    "i18next": "^23.12.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.5.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "next-i18n-router": "^5.5.1",
+    "next-i18next": "^15.3.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^14.1.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
