--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons": "^3.10.0",
     "@tabler/icons-react": "^3.10.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-table": "^8.20.5",
+    "@uploadthing/react": "^7.0.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -45,8 +49,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^14.1.3",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
