--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "i18n-backend": "^0.1.13",
     "i18next": "^23.12.1",
@@ -49,6 +50,7 @@
     "next-i18next": "^15.3.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^14.1.3",
