--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "i18n-backend": "^0.1.13",
     "i18next": "^23.12.1",
     "i18next-resources-to-backend": "^1.2.1",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.408.0",
     "mongoose": "^5.13.19",
     "next": "14.2.4",
